<resources>
    <string name="app_name">Fresh Carts</string>
    <string name="fresh_carts">Fresh Carts</string>
    <string name="Shape">shape</string>
    <string name="welcome_to_fresh_carts">Welcome to Fresh Carts</string>
    <string name="sign_in">SIGN IN</string>
    <string name="forget_password">Forget password ?</string>
    <string name="log_in">LOG IN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in_to_continue">Log-in to continue</string>
    <string name="sign_up">Sign up</string>
    <string name="create_account_for_new_user">Create Account for new user</string>
    <string name="full_name">Full name</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_number">Phone number</string>
    <string name="click_here_to_login">Click here to login</string>
    <string name="button">Button</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1₹s</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="search">Search</string>
    <string name="shop_groceries_items_daily_grocery_app_online_super_market_store_at_best_prices">Shop groceries items daily grocery app online super market store at best prices.</string>
    <string name="top_discounted_items">Top Discounted items</string>
    <string name="select_a_category">Select a category</string>
    <string name="see_more">See More</string>
    <string name="select_categories">Select Categories</string>
    <string name="fruits">fruits</string>

    <string name="recently_viewed_items">Recently Viewed Items</string>
    <string name="all">all</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="todo">todoo</string>
    <string name="add_product">Add Product</string>
    <string name="todo1">TODO</string>
    <string name="email">Email</string>
    <string name="create_account_for_new_seller">Create Account For New Seller</string>
    <string name="register">Register</string>

    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="state">State</string>

    <string name="phone">Phone</string>
    <string name="full_nameE">Full Name</string>
    <string name="shop_name">Shop Name</string>
    <string name="street_name">Street Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="todo0">TODO</string>
    <string name="recover">Recover</string>
    <string name="Online_fruit_and_vegetable_delivery">Online Fruit and Vegetable Delivery</string>
    <string name="cart">Cart</string>

    <string name="delivery_fee">Delivery Fee</string>
    <string name="price">Price</string>
    <string name="price_details">Price Details</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="_00_0">₹00.0</string>
    <string name="total_amount">Total Amount</string>
    <string name="cart_items_price">Cart Items Price</string>
    <string name="_00_00">₹ 00.00</string>
    <string name="place_order">Place Order</string>

    <string name="register_user">Register User</string>
    <string name="recover_password">Recover Password</string>
    <string name="online_grocery_and_vegetable_delivery">Online Grocery and vegetable delivery</string>

    <string name="rupee">\u20A8</string>
    <string name="todot">TODO</string>
    <string name="googlepay_button_content_description">Google Pay</string>



</resources>