
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CartActivity">

    <RelativeLayout
        android:id="@+id/RL1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_rect01"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:background="@null"
            app:srcCompat="@drawable/ic_back_white"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/cart"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/cartIsEmpty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:text="@string/cart_is_empty"
        android:textColor="@color/colorBlack"
        android:textSize="24sp" />

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/LL"
        android:layout_below="@id/RL1">

        <RelativeLayout
            android:id="@+id/shopRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/cartItemRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="-1dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/row_product_cart" />

            <View
                android:id="@+id/view01"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/colorGray01"
                android:layout_below="@id/cartItemRV"/>

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/view01"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp">

                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price_details"
                        android:textStyle="bold"
                        android:textSize="18sp"
                        android:textColor="@color/colorGray01"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textSize="15sp"
                        android:textColor="@color/colorBlack"/>
                    <TextView
                        android:id="@+id/detailCost"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_0"
                        android:textSize="15sp"
                        android:textColor="@color/colorBlack"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery_fee"
                        android:textSize="15sp"
                        android:textColor="@color/colorBlack"/>
                    <TextView
                        android:id="@+id/detailDelivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_0"
                        android:textSize="15sp"
                        android:textColor="@color/colorBlack"/>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/total_amount"
                        android:textSize="15sp"
                        android:textColor="@color/colorBlack"/>
                    <TextView
                        android:id="@+id/detailTotal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_00_0"
                        android:textSize="15sp"
                        android:textColor="@color/colorBlack"/>
                </TableRow>

            </TableLayout>

        </RelativeLayout>
    </ScrollView>

    <View
        android:id="@+id/view02"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorGray01"
        android:layout_below="@id/sv"/>

    <LinearLayout
        android:id="@+id/LL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:orientation="horizontal"
        android:elevation="6dp"
        android:padding="2dp"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/grandTotalTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_00_00"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cart_items_price"
                android:textColor="@color/colorBlack"
                android:textSize="11sp" />

        </LinearLayout>

        <Button
            android:id="@+id/placeOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="2dp"
            android:minWidth="120dp"
            android:background="@drawable/shape_rect06"
            android:padding="5dp"
            android:text="@string/place_order"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

</RelativeLayout>