<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".signup"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="119dp"
        android:layout_height="98dp"
        android:layout_gravity="center"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/signuplogo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:text="@string/create_account_for_new_user"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
        android:id="@+id/profileIV"
        android:layout_width="76dp"
        android:layout_height="75dp"
        android:layout_centerHorizontal="false"
        android:layout_gravity="center_horizontal"
        app:c_border="true"
        app:c_border_color="@android:color/holo_orange_dark"
        app:c_border_width="1dp"
        app:srcCompat="@drawable/ic_user_circle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">


        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:id="@+id/Fullname_signup"
            android:layout_height="wrap_content"
            android:hint="@string/full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user"
                android:drawablePadding="5dp"
                android:inputType="textPersonName"
                android:textColorLink="#FF6F00"
                android:drawableLeft="@drawable/user" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:id="@+id/username_signup"
            android:layout_height="wrap_content"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_account_circle_24"
                android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                android:drawablePadding="5dp"
                android:inputType="textPersonName"
                android:textColorLink="#FF6F00" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_signup_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:textColorLink="#FF6F00"
                android:drawableLeft="@drawable/ic_baseline_email_24" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_signup_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:drawablePadding="5dp"
                android:inputType="phone"
                android:textColorLink="#FF6F00"
                android:drawableLeft="@drawable/ic_baseline_phone_24" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_singup_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#000000">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="5dp"
                android:inputType="textPassword"
                android:textColorLink="#FF6F00"
                android:drawableLeft="@drawable/ic_baseline_lock_24" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:orientation="vertical">


            <Button
                android:id="@+id/Registersignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape"
                android:elevation="5dp"
                android:text="Register"
                app:backgroundTint="@null">


            </Button>

            <Button
                android:id="@+id/loginbtn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@color/white"
                android:elevation="5dp"
                android:onClick="login"
                android:text="@string/click_here_to_login"
                android:textColor="@color/black"
                app:backgroundTint="@null">


            </Button>


        </LinearLayout>


    </LinearLayout>

</LinearLayout>
