<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileEditUserActivity">


    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/shape_rec01"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/backBtn1"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@android:color/holo_orange_dark"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <com.blogspot.atifsoftwares.circularimageview.CircularImageView
        android:id="@+id/profileIV"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/toolbarRL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        app:c_border="true"
        app:c_border_color="@android:color/holo_orange_dark"
        app:c_border_width="1dp"
        app:srcCompat="@drawable/ic_user_circle">

    </com.blogspot.atifsoftwares.circularimageview.CircularImageView>

    <LinearLayout
        android:layout_below="@id/profileIV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">


        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:id="@+id/fullName_E_Profile"
            android:layout_height="wrap_content"
            android:hint="@string/full_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user"
                android:drawablePadding="5dp"
                android:inputType="textPersonName"
                android:textColorLink="#FF6F00"
                android:drawableLeft="@drawable/user" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:id="@+id/userNameET"
            android:layout_height="wrap_content"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_account_circle_24"
                android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                android:drawablePadding="5dp"
                android:inputType="textPersonName"
                android:textColorLink="#FF6F00" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailET"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="5dp"
                android:inputType="textEmailAddress"
                android:textColorLink="#FF6F00"
                android:drawableLeft="@drawable/ic_baseline_email_24" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_numberET"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_phone_24"
                android:drawableLeft="@drawable/ic_baseline_phone_24"
                android:drawablePadding="5dp"
                android:inputType="phone"
                android:textColorLink="#FF6F00" />

        </com.google.android.material.textfield.TextInputLayout>  <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityET"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="City">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_add_location_24"
                android:drawableLeft="@drawable/ic_baseline_add_location_24"
                android:drawablePadding="5dp"
                android:inputType="text"
                android:textColorLink="#FF6F00" />

        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="226dp"
            android:orientation="vertical">


            <Button
                android:id="@+id/updateBT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape"
                android:elevation="5dp"
                android:text="Update"
                app:backgroundTint="@null">


            </Button>


        </LinearLayout>


    </LinearLayout>

</RelativeLayout>