<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ForgotPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:background="@drawable/shape_rect01">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_back_white"
            android:background="@null"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/recover_password"
            android:textStyle="bold"
            android:textSize="24dp"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/shape_circle01"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/ic_key_white"
        android:padding="5dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="TODO" />

    <EditText
        android:id="@+id/femailET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iconIv"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/shape_rect02"
        android:drawableStart="@drawable/ic_mail_gray"
        android:drawableLeft="@drawable/ic_mail_gray"
        android:drawablePadding="5dp"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <Button
        android:id="@+id/recoverBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/femailET"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:minWidth="120dp"
        android:text="@string/recover"
        android:textColor="@color/colorWhite"
        app:backgroundTint="@color/colorPrimary" />

</RelativeLayout>